--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,34 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../">
+    <link rel="stylesheet" href="./styles.css">
     <title>Formulario</title>
 </head>
 
 <body>
     <div class="header">
-        <p>Aquí va el logo del cft</p>
+
     </div>
     <div class="container">
 
         <div class="menu">
-            <ul>
-                <li> <a target="_blank" href="http://cftla.umas.cl/alumnosnet/SituActual.asp"> perfil</a></li>
-                <li> <a target="_blank" href="http://cftla.umas.cl/alumnosnet/malla-curri.asp"> malla</a></li>
-                <li> <a target="_blank" href="http://cftla.umas.cl/alumnosnet/concent-notas.asp"> notas</a></li>
+            <ul class="menuContainer">
+                <li>
+                    <img class="user" src="../assets/pngjoy.com_gray-circle-login-user-icon-png-transparent-png_2750635.png" alt="perfil">
+                    <a target="_blank" href="http://cftla.umas.cl/alumnosnet/SituActual.asp"> 
+                        perfil
+                    </a>
+                </li>
+                <li>
+                    <img class="malla" src="../assets/table-icon-24173.png" alt="malla">
+                    <a target="_blank" href="http://cftla.umas.cl/alumnosnet/malla-curri.asp"> 
+                        malla
+                    </a>
+                </li>
+                <li>
+                    <img class="grades" src="../assets/noun_Report Card_729.png" alt="notas">
+                    <a target="_blank" href="http://cftla.umas.cl/alumnosnet/concent-notas.asp"> 
+                        notas
+                    </a>
+                </li>
             </ul>
         </div>
         <!--menu-->
 
         <div class="formulario">
-            <h1>Formulario Alumnos </h1>
+            <h2>Formulario Alumnos </h2>
             <form>
                 <fieldset>
                     <legend>Llena estos campos para poder actualizar tus datos 1er semetre 2021</legend>
-                    <div>
+                    <div class="width100p">
                         <div>
                             <label>Rut: </label>
-                            <input type="text" placeholder="12.345.678-9" required />
+                            <input type="number" placeholder="12.345.678-9" required />
                         </div>
                         <div>
                             <label>Primer Nombre: </label>
@@ -54,33 +69,61 @@
                             <label>Fecha de nacimiento </label>
                             <input type="date" min="1921-01-01" max="2010-12-12" required />
                         </div>
-                        <div>
+                        <div class="genre">
                             <label>Género</label>
-                            <input type="text" placeholder="Género" required />
+                            <div class="genreContainer">
+                                <div>
+                                    <input id="male" type="radio" name="genre" value="male">
+                                    <label>Masculino</label>
+                                </div>
+
+                                <div>
+                                    <input id="female" type="radio" name="genre " value="famale ">
+                                    <label>Famenino</label>
+                                </div>
+                                <div>
+                                    <input id="lgbtq " type="radio" name="genre " value="lgbt ">
+                                    <label>prefiero no decirlo</label>
+                                </div>
+                            </div>
+
                         </div>
                         <div>
                             <label>Teléfono: </label>
-                            <input type="tel" placeholder="Teléfono" required />
+                            <input type="tel " placeholder="Teléfono " required />
                         </div>
                         <div>
                             <label>Correo: </label>
-                            <input type="email" placeholder="Correo" required />
+                            <input type="email " placeholder="Correo " required />
                         </div>
-                        <div>
+                        <div class="message ">
                             <label>Mensaje: </label>
                             <textarea required></textarea>
                         </div>
                     </div>
-                    <div>
-                        <input name="send" type="submit" value="Envíar" />
-                    </div>
                 </fieldset>
+                <div>
+                    <button class="btnSend">Enviar</button>
+                </div>
             </form>
         </div>
         <!--form-->
     </div>
     <!--container-->
 
+    <div class="footer">
+        <div>
+            <img src="../assets/Logo CFT_horizontal_dos_blanco.png " alt="logo_cft_dos ">
+        </div>
+        <div>
+            <p>Manuel A. Matta 1055, Lautaro ..</p>
+            <p>+56 9 53207825</p>
+            <p>Horario de atención <br> Lunes a Viernes 09:00 a 14:00 hrs</p>
+        </div>
+        <div></div>
+    </div class="footer">
+
+    <script src="../js/index.js "></script>
 </body>
 
 </html>
