--- a/src/public/index.html
+++ b/src/public/index.html
@@ -78,11 +78,11 @@
                                 </div>
 
                                 <div>
-                                    <input id="female" type="radio" name="genre " value="famale ">
+                                    <input id="female" type="radio" name="genre" value="famale">
                                     <label>Famenino</label>
                                 </div>
                                 <div>
-                                    <input id="lgbtq " type="radio" name="genre " value="lgbt ">
+                                    <input id="lgbtq " type="radio" name="genre" value="lgbt">
                                     <label>prefiero no decirlo</label>
                                 </div>
                             </div>
@@ -90,11 +90,11 @@
                         </div>
                         <div>
                             <label>Teléfono: </label>
-                            <input type="tel " placeholder="Teléfono " required />
+                            <input type="number" placeholder="Teléfono " required />
                         </div>
                         <div>
                             <label>Correo: </label>
-                            <input type="email " placeholder="Correo " required />
+                            <input type="email" placeholder="Correo " required />
                         </div>
                         <div class="message ">
                             <label>Mensaje: </label>
@@ -103,7 +103,7 @@
                     </div>
                 </fieldset>
                 <div>
-                    <button class="btnSend">Enviar</button>
+                    <button onclick="reset()" class="btnSend">Enviar</button>
                 </div>
             </form>
         </div>
@@ -123,7 +123,7 @@
         <div></div>
     </div class="footer">
 
-    <script src="../js/index.js "></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
