--- a/src/public/index.html
+++ b/src/public/index.html
@@ -47,42 +47,42 @@
                     <div class="width100p">
                         <div>
                             <label>Rut: </label>
-                            <input name="rut" type="number" placeholder="12.345.678-9" />
+                            <input id="rut" type="number" placeholder="12.345.678-9" />
                         </div>
                         <div>
                             <label>Primer Nombre: </label>
-                            <input name="primerNombre" type="text" placeholder="Primer Nombre" />
+                            <input id="primerNombre" type="text" placeholder="Primer Nombre" />
                         </div>
                         <div>
                             <label>Segundo Nombre: </label>
-                            <input name="segundoNombre" type="text" placeholder="Segundo Nombre" />
+                            <input id="segundoNombre" type="text" placeholder="Segundo Nombre" />
                         </div>
                         <div>
                             <label>Primer Apellido: </label>
-                            <input name="primerApellido" type="text" placeholder="Primer Apellido" />
+                            <input id="primerApellido" type="text" placeholder="Primer Apellido" />
                         </div>
                         <div>
                             <label>Segundo Apellido: </label>
-                            <input name="SegundoApellido" type="text" placeholder="Segundo Nombre" />
+                            <input id="SegundoApellido" type="text" placeholder="Segundo Nombre" />
                         </div>
                         <div>
                             <label>Fecha de nacimiento </label>
-                            <input name="fechaNacimiento" type="date" min="1921-01-01" max="2010-12-12" />
+                            <input id="fechaNacimiento" type="date" min="1921-01-01" max="2010-12-12" />
                         </div>
                         <div class="genre">
                             <label>Género</label>
                             <div class="genreContainer">
                                 <div>
-                                    <input id="male" type="radio" name="genre" value="male">
+                                    <input name="male" type="radio" id="genre" value="male">
                                     <label>Masculino</label>
                                 </div>
 
                                 <div>
-                                    <input id="female" type="radio" name="genre" value="famale">
+                                    <input name="female" type="radio" id="genre" value="famale">
                                     <label>Famenino</label>
                                 </div>
                                 <div>
-                                    <input id="lgbtq " type="radio" name="genre" value="lgbt">
+                                    <input name="lgbtq " type="radio" id="genre" value="lgbt">
                                     <label>prefiero no decirlo</label>
                                 </div>
                             </div>
@@ -90,11 +90,11 @@
                         </div>
                         <div>
                             <label>Teléfono: </label>
-                            <input name="telefono" type="number" placeholder="Teléfono " />
+                            <input id="telefono" type="number" placeholder="Teléfono " />
                         </div>
                         <div>
                             <label>Correo: </label>
-                            <input name="correo" type="email" placeholder="Correo " />
+                            <input id="correo" type="email" placeholder="Correo " />
                         </div>
                         <div class="message ">
                             <label>Mensaje: </label>
@@ -122,7 +122,7 @@
             <p>Horario de atención <br> Lunes a Viernes 09:00 a 14:00 hrs</p>
         </div>
         <div></div>
-    </div class="footer">
+    </div>
 
     <script src="../js/index.js"></script>
 </body>
